alignment change fixed

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -155,7 +155,7 @@
 }
 
 .table-box {
-  @apply w-[99.5%] h-full rounded-lg overflow-hidden mt-4;
+  @apply w-[99.5%] h-full rounded-lg overflow-hidden;
 }
 
 .table-box-top {
